# rte-dataset

./: .gitattributes  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: build_dataset.sh  generate_dataset.sh
src/rte_dataset/builders/: features.py  mat_loader.py  pipeline.py  processings.py  utils.py
src/rte_dataset/builders/tfds/rte/: rte_dataset_builder.py
src/rte_dataset/generator/matlab/2d-gmres/: param_test.m  param_train.m  test_dataset.m  train_dataset.m
src/rte_dataset/generator/matlab/2d-gmres/gmres/: convert_data.m  form_XYWZ.m  form_YWZ.m  generator_m.m  gmres_solver.m  ip.m  layer_generate.m  plot_itr_bc.m  qnwlege1.m  qnwlege2.m  run_main.m  sparse_trans.m
src/rte_dataset/generator/matlab/2d-sweeping/: P2generator.m  gen_inputs.m  gen_test_boundary.m  generator.m  get_params.m  postprocess.m  qnwlege1.m  qnwlege2.m  sweeping_solver.m
src/rte_dataset/generator/matlab/2d-sweeping/configs/: config_test2.m
