[project]
name = "rte-dataset"
version = "0.1.1"
description = "Dataset for training and evaluating deeprte model."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ email = "mazhengcn@outlook.com" }, { name = "Zheng Ma" }]
license = { text = "Apache License, Version 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface-hub[cli,hf-xet]>=0.32.4",
    "numpy>=1.26.4",
    "scipy>=1.14.1",
]

[project.urls]
homepage = "https://github.com/mazhengcn/rte-dataset"

[project.optional-dependencies]
tfds = ["tensorflow-cpu>=2.18.0", "tensorflow-datasets>=4.9.8"]

[build-system]
requires = ["uv_build>=0.6"]
build-backend = "uv_build"
